--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/setting"
         android:orderInCategory="1"
-        android:title="@string/search_title" />
+        android:title="@string/search_title"
+        android:icon="@drawable/settings_outline"
+        app:showAsAction="ifRoom"
+        />
+
 
 </menu>
