--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#156caa</color>
     <color name="colorPrimaryDark">#0d446b</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#2392e2</color>
     <color name="colorTitle">#FFFFFF</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorMain">#dadada</color>
